--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -2,9 +2,15 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.AppMain {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
