--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -1,8 +1,8 @@
 .App {
-  background-color: #282c34;
+  background-color: #1b1b1b;
   min-height: 100vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -11,6 +11,14 @@
 
 .AppMain {
   display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.AppForm {
+  display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
+  margin-right: 70px;
 }
